Implementación de nuevas funcionalidades

--- a/HoleInOneControl/Views/Shared/_Layout.cshtml
+++ b/HoleInOneControl/Views/Shared/_Layout.cshtml
@@ -175,7 +175,7 @@
         </li>
 
         <li class="nav-item">
-            <a href="~/Users/List" class="nav-link">
+            <a href="~/Transaction/List" class="nav-link">
                 <i class="nav-icon fas fa-exchange-alt"></i>
                     <p>
                         Transacción
